--- a/src/template.html
+++ b/src/template.html
@@ -19,20 +19,133 @@
         <div>
             <h2 class="h1">Meet our team</h2>
         </div>
+        <img src="~images/people/02.jpg" alt="">
         <div class="people__grid">
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');"></div>
-                    <div class="people__mail"></div>
+                    <div class="people__avatar" style="background-image: url('~@/images/people/01.jpg');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
                 </div>
                 <div class="people__description">
                     <h3 class="people__name">Lorem ipsum</h3>
                     <h4 class="people__title">CEO</h4>
                     <h4 class="people__location">Warsaw</h4>
                 </div>
+            </div>
 
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
 
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
+
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
+
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
+
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
+
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
+
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
+            </div>
+
+            <div class="people__item">
+                <div class="people__avatar-wrapper">
+                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
+                        <div class="people__overlay"></div>
+                    </div>
+                    <a class="people__mail"></a>
+                </div>
+                <div class="people__description">
+                    <h3 class="people__name">Lorem ipsum</h3>
+                    <h4 class="people__title">CEO</h4>
+                    <h4 class="people__location">Warsaw</h4>
+                </div>
             </div>
 
 
