--- a/src/template.html
+++ b/src/template.html
@@ -19,13 +19,13 @@
         <div>
             <h2 class="h1">Meet our team</h2>
         </div>
-        <img src="~images/people/02.jpg" alt="">
+
         <div class="people__grid">
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('~@/images/people/01.jpg');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_01.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -38,8 +38,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_02.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -52,8 +52,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_03.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -66,8 +66,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_04.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -80,8 +80,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_05.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -94,8 +94,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_01.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -108,8 +108,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_02.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -122,8 +122,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_03.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
@@ -136,8 +136,8 @@
 
             <div class="people__item">
                 <div class="people__avatar-wrapper">
-                    <div class="people__avatar" style="background-image: url('https://placebeard.it/640x640');">
-                        <div class="people__overlay"></div>
+                    <div class="people__avatar" style="background-image: url('assets/images/person_04.jpg');">
+
                     </div>
                     <a class="people__mail"></a>
                 </div>
